--- a/views/front/mesaj/mesajicc.ejs
+++ b/views/front/mesaj/mesajicc.ejs
@@ -53,7 +53,8 @@
                                         <p>
                                             {{item.text}}
                                         </p>
-                                    <span style="margin-top: -22px;" class="chat-time"><small>1 saniye önce</small></span>
+                                        <span style="margin-top: -22px;" class="chat-time"><small>1 saniye
+                                                önce</small></span>
                                     </div>
                                 </div>
                             </div>
@@ -63,7 +64,8 @@
                                         <p>
                                             {{item.text}}
                                         </p>
-                                    <span style="margin-top: -22px;" class="chat-time"><small>1 saniye önce</small></span>
+                                        <span style="margin-top: -22px;" class="chat-time"><small>1 saniye
+                                                önce</small></span>
                                     </div>
                                 </div>
                             </div>
