--- a/views/front/mesaj/mesajicc.ejs
+++ b/views/front/mesaj/mesajicc.ejs
@@ -37,7 +37,11 @@
                             style="color: gray; float: left; font-size: 24pt; padding-left: 20px;"></ion-icon>
                     </td>
                     <td>
-                        <h3 class="panel-title" style="padding-top: 7px; padding-left: 5vw;"><%= mesaj.user1.item.name %> </h3>
+                        <% if (mesaj.user1.item._id !== user._id) { %>
+                            <h3 class="panel-title" style="padding-top: 7px; padding-left: 5vw;"><%= mesaj.user1.item.name %> </h3>
+                        <% }else{ %>
+                            <h3 class="panel-title" style="padding-top: 7px; padding-left: 5vw;"><%= mesaj.user2.item.name %> </h3>
+                        <% } %> 
                     </td>
                 </tr>
             </table>
@@ -47,7 +51,7 @@
                 <div class="panel" id="chat">
                     <div class="panel-body" id="scrollChat" style="width: 100%; height: 88vh; overflow: scroll;">
                         <div class="chats" v-for="item in messages">
-                            <div class="chat" v-if="item.user._id == '<%= user._id %>'" style="margin-top: 10px; margin-bottom: 10px;">
+                            <div class="chat" v-if="item.user._id == '<%= user._id %>'">
                                 <div class="chat-body">
                                     <div class="chat-content" style="border-radius: 10px !important;">
                                         <p>
