--- a/views/front/bildirim.ejs
+++ b/views/front/bildirim.ejs
@@ -16,7 +16,27 @@
             <div class="mcontainer" style="margin-top: -20px;">
 
                 <div id="sozluk" style="padding-left:10px; padding-right:10px;">
-                    <div style="display: flex; flex-direction: row; padding-top: 4px;">
+                    <% bildirim.forEach(element => { %>
+                        <% if (element.type == 0) { %>
+                            <div style="display: flex; flex-direction: row; padding-top: 4px;">
+                                <div
+                                    style="flex:1; align-items: center; justify-content: center; padding-left: 5vw; padding-top: 3px;">
+                                    <ion-icon class="text-2xl" name="heart-outline"></ion-icon>
+                                </div>
+                                <div style="flex:12">
+                                    <img src="https://picsum.photos/200"
+                                        style="border-radius: 50px; margin-bottom: 6px; height: 40px;">
+                                    <p style="margin-top: -11px;"> <a href=""><b><%= element.user.item.name %> </b> yorumunuzu beğendi. </a> </p>
+                                    <p style="line-height: 1.2;"> <small> 
+                                        <%= element.yorum.yorum %>   
+                                    </small> </p>
+                                </div>
+                            </div>
+                            <hr>
+                        <% } %>
+                    <% }) %>
+
+                    <!-- <div style="display: flex; flex-direction: row; padding-top: 4px;">
                         <div
                             style="flex:1; align-items: center; justify-content: center; padding-left: 5vw; padding-top: 3px;">
                             <ion-icon name="chatbubble-ellipses-outline" class="text-2xl"></ion-icon>
@@ -40,32 +60,14 @@
                     <div style="display: flex; flex-direction: row; padding-top: 4px;">
                         <div
                             style="flex:1; align-items: center; justify-content: center; padding-left: 5vw; padding-top: 3px;">
-                            <ion-icon class="text-2xl" name="heart-outline"></ion-icon>
-                        </div>
-                        <div style="flex:12">
-                            <img src="https://picsum.photos/200"
-                                style="border-radius: 50px; margin-bottom: 6px; height: 40px;">
-                            <p style="margin-top: -11px;"> <a href=""><b>Mert </b> yorumunuzu beğendi. </a> </p>
-                            <p style="line-height: 1.2;"> <small> 
-                                Yorum metni    
-                            </small> </p>
-                        </div>
-                    </div>
-                    <hr>
-                    <div style="display: flex; flex-direction: row; padding-top: 4px;">
-                        <div
-                            style="flex:1; align-items: center; justify-content: center; padding-left: 5vw; padding-top: 3px;">
                             <ion-icon class="text-2xl" name="person-add-outline"></ion-icon>
                         </div>
                         <div style="flex:12">
                             <img src="https://picsum.photos/200"
                                 style="border-radius: 50px; margin-bottom: 6px; height: 40px;">
                             <p style="margin-top: -11px;"> <a href=""><b>Ahmet </b> ağınıza katıldı. </a> </p>
-                            <!-- <p style="line-height: 1.2;"> <small> 
-                                Yorum metni    
-                            </small> </p> -->
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div id="medya" style="display: none; padding-left:10px; padding-right:10px;">
                     <div style="display: flex; flex-direction: row; padding-top: 4px;">
@@ -110,37 +112,7 @@
                     </div>
                 </div>
 
-                <% bildirim.forEach(element=> { %>
-                    <div style="display: flex; flex-direction: row; padding-top: 4px;">
-                        <div
-                            style="flex:1; align-items: center; justify-content: center; padding-left: 5vw; padding-top: 3px;">
-                            <ion-icon name="chatbubble-ellipses-outline" class="text-2xl"></ion-icon>
-                        </div>
-                        <div style="flex:12">
-                            <img src="<%= element.user.photo %>"
-                                style="border-radius: 50px; margin-bottom: 6px; height: 40px;">
-                            <p style="margin-top: -11px;"> <a href="<%= element.url %>"><b>Sistem mesajı</b>
-                                    <%= element.title %>
-                                </a> </p>
-                            <p style="line-height: 1.2;"> <small>
-                                    <%= element.title %>
-                                </small> </p>
-                        </div>
-                    </div>
-                    <hr>
-                    <div style="display: flex; flex-direction: row; padding-top: 4px;">
-                        <div
-                            style="flex:1; align-items: center; justify-content: center; padding-left: 5vw; padding-top: 3px;">
-                            <ion-icon class="text-2xl" name="heart-outline"></ion-icon>
-                        </div>
-                        <div style="flex:12">
-                            <img src="<%= user.photo %>" style="border-radius: 50px; margin-bottom: 6px; height: 40px;">
-                            <p style="margin-top: -11px;"> <a href=""><b>deneme kişisi beğendi </b> </a> </p>
-                            <p style="line-height: 1.2;"> <small> Deneme </small> </p>
-                        </div>
-                    </div>
-                    <hr>
-                    <% }) %>
+                
             </div>
         </div>
         <footer>
