--- a/views/front/bildirim.ejs
+++ b/views/front/bildirim.ejs
@@ -33,7 +33,23 @@
                                 </div>
                             </div>
                             <hr>
-                        <% } %>
+                        <% }else if(element.type == 1){ %>
+                            <div style="display: flex; flex-direction: row; padding-top: 4px;">
+                                <div
+                                    style="flex:1; align-items: center; justify-content: center; padding-left: 5vw; padding-top: 3px;">
+                                    <ion-icon class="text-2xl" name="heart-outline"></ion-icon>
+                                </div>
+                                <div style="flex:12">
+                                    <img src="https://picsum.photos/200"
+                                        style="border-radius: 50px; margin-bottom: 6px; height: 40px;">
+                                    <p style="margin-top: -11px;"> <a href=""><b><%= element.user.item.name %> </b> konunuza yorum ekledi. </a> </p>
+                                    <p style="line-height: 1.2;"> <small> 
+                                        <%= element.sozluk.title %>   
+                                    </small> </p>
+                                </div>
+                            </div>
+                            <hr>
+                        <% } %> 
                     <% }) %>
 
                     <!-- <div style="display: flex; flex-direction: row; padding-top: 4px;">
