--- a/views/front/medya/test.ejs
+++ b/views/front/medya/test.ejs
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.0.0-rc.1/cropper.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
+<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
     .cropper-container {
         margin: 0 auto 20px auto;
