--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -234,7 +234,7 @@
     <div style="flex: 2; align-items: center; justify-content: center;">
         <a href="/medya"><ion-icon name="camera-outline" style="color: gray;" class="text-4xl"></ion-icon></a>
     </div>
-    <% if (!user) { %>
+    <% if (user) { %>
         <% if (true) { %>
             <div style="flex: 2; align-items: center; justify-content: center;" uk-toggle="target: #create-post-modal">
                 <img src="../../../paylas.png" style="height: 40px; top: 0px; bottom: 0px; left: 0px; right: 0px; margin:auto; margin-bottom: 4px;">
