--- a/views/front/medya/test.ejs
+++ b/views/front/medya/test.ejs
@@ -20,10 +20,10 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                     aria-hidden="true">&times;</span></button>
             <div class="modal-positioner">
-                <h1>Crop Photo</h1>
+                <h1>Kırp</h1>
                 <hr>
                 <img style="width: 271px; height: 271px;" class="js-avatar-preview" src="">
-                <button class="btn btn-primary js-save-cropped-avatar">Save</button>
+                <button class="btn btn-primary js-save-cropped-avatar">Kaydet</button>
             </div>
         </div>
     </div>
