--- a/views/front/bildirim.ejs
+++ b/views/front/bildirim.ejs
@@ -39,7 +39,7 @@
                             <div style="display: flex; flex-direction: row; padding-top: 4px;">
                                 <div
                                     style="flex:1; align-items: center; justify-content: center; padding-left: 5vw; padding-top: 3px;">
-                                    <ion-icon class="text-2xl" name="heart-outline"></ion-icon>
+                                    <ion-icon class="text-2xl" name="chatbubble-ellipses-outline"></ion-icon>
                                 </div>
                                 <div style="flex:12">
                                     <img src="<%= element.user.photo %>"
