--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -170,6 +170,7 @@
                         axios.post("/bildirimsozluk",{
                             type:1,
                             sozluk:document.getElementById("sid").value,
+                            yorum:this.yorum
                         })
                         this.yyy = true
                         setTimeout(() => {
