--- a/views/front/mesaj/mesajicc.ejs
+++ b/views/front/mesaj/mesajicc.ejs
@@ -22,9 +22,9 @@
 
 <style>
     textarea {
-  box-sizing: border-box;
-  resize: none;
-}
+        box-sizing: border-box;
+        resize: none;
+    }
 </style>
 
 <body>
@@ -95,8 +95,8 @@
         </div>
         <div class="panel-footer fixed-bottom">
             <div class="input-group">
-                <textarea type="text" v-model="text" style="border-radius: 30px;" class="form-control"
-                    placeholder="Mesajınız giriniz.." data-autoresize rows="1"></textarea>
+                <textarea style="border-radius: 30px;" class="form-control"
+                    placeholder="Mesajınız giriniz.."></textarea>
                 <span class="input-group-btn">
                     <button class="btn" @click="mesajGonder()" style="border-radius: 100px;" type="button">
                         <i class="fa fa-chevron-right fa-2x" style="color: #62a8ea;"></i>
