--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -204,13 +204,11 @@
         </footer> -->
 
         
-        <footer style="max-height: 200px;">
-            <div style="flex: 10; align-items: center; justify-content: center;">
-                <textarea type="text" v-model="text" style="margin-left: 2vw; border-radius: 30px; padding:20px; padding-bottom:10px"
+        <footer style="max-height: 40vw;">
+            <div style="flex: 10; align-items: center; justify-content: center; margin-top: -10px;">
+                <textarea type="text" v-model="text" style="border-radius: 30px; padding:20px; margin-bottom: -4vh;"
                         placeholder="Mesajınız giriniz.." data-autoresize style="resize: none;"></textarea>
-            </div>
-            <div style="flex: 1; align-items: center; justify-content: center;">
-                <button class="btn" @click="mesajGonder()" style="border-radius: 100px; padding-top: 35%; position: relative;" type="button">
+                <button class="btn" @click="mesajGonder()" style="border-radius: 10 vh; position: relative; margin-top: -100px; margin-left: 92vw;" type="button">
                     <i class="fa fa-chevron-right fa-2x" style="color: #62a8ea;"></i>
                 </button>
             </div>
