--- a/views/front/mesaj/mesajicc.ejs
+++ b/views/front/mesaj/mesajicc.ejs
@@ -96,7 +96,7 @@
         <div class="panel-footer fixed-bottom">
             <div class="input-group">
                 <textarea style="border-radius: 30px;" class="form-control"
-                    placeholder="Mesajınız giriniz.."></textarea>
+                    placeholder="Mesajınız giriniz.." data-autoresize></textarea>
                 <span class="input-group-btn">
                     <button class="btn" @click="mesajGonder()" style="border-radius: 100px;" type="button">
                         <i class="fa fa-chevron-right fa-2x" style="color: #62a8ea;"></i>
