--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -21,8 +21,6 @@
                 resize: none;
             }
         </style>
- 
-
     <header
         style="display: flex; height: 50px; padding-left: 2vw; padding-top: 10px; border-radius: 20px;">
         <div style="flex: 1;">
@@ -212,7 +210,7 @@
         
         <footer>
             <div style="flex: 10; align-items: center; justify-content: center;">
-                <textarea style="border-radius: 80px; padding:18px;" class="form-control"
+                <textarea style="border-radius: 40px; padding:18px;" rows="1"
                     placeholder="Mesajınız giriniz.." data-autoresize></textarea>
             </div>
             <div style="flex: 1; align-items: center; justify-content: center;">
