--- a/views/front/mesaj/mesajicc.ejs
+++ b/views/front/mesaj/mesajicc.ejs
@@ -95,7 +95,7 @@
         </div>
         <div class="panel-footer fixed-bottom">
             <div class="input-group">
-                <textarea style="border-radius: 30px;" class="form-control"
+                <textarea style="border-radius: 30px;" v-model="text" class="form-control"
                     placeholder="Mesajınız giriniz.." data-autoresize></textarea>
                 <span class="input-group-btn">
                     <button class="btn" @click="mesajGonder()" style="border-radius: 100px;" type="button">
