--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -84,6 +84,7 @@
     new Vue({
         el: "#app",
         data: {
+            salak:"sdasdasdasdasd",
             durum: false,
             sid: "",
             yorum: "",
