--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -48,8 +48,10 @@
                             <img src="../../../front/images/avatars/avatar-2.jpg" class="bg-gray-200 border border-white rounded-full w-10 h-10">
                         </a> -->
                         <div class="flex-1 font-semibold capitalize">
+                            {{yorum}}
                             <!-- <h3 class="text-lg font-semibold">
                                 <%= konu.title %>
+                                
                             </h3> -->
                             <!-- <p class="text-sm text-gray-400 mb-2"> Yazar: <span data-href="%40tag-dev.html">Abdullah Bektaş</span> |
                                 <%= moment(konu.createdAt,"ddd MMM DD YYYY HH:mm:ss GMT Z'").fromNow(true) %> önce </span>
@@ -198,8 +200,25 @@
 
         </div>
 
-        <%- include ../part/footerflex.ejs %> 
-        <div id="create-post-modal" class="create-post" uk-modal>
+        
+<footer>
+    <table>
+        <tr>
+            <td style="width: 90vw;">
+                <div>
+                    <p style="color: black !important;"> {{yorum}} </p>
+                    <input type="text" placeholder="Yorumunuz" v-model="yorum">
+                </div>
+            </td>
+            <td style="width: 10vw;">
+                <div>
+                    <button @click="ekle()" style="color: white;" class="uk-close bg-blue-600 flex h-9 items-center justify-center rounded-md text-white px-5 font-medium"> Paylaş </button>
+                </div>
+            </td>
+        </tr>
+    </table>
+</footer>
+        <!-- <div id="create-post-modal" class="create-post" uk-modal>
             <div
                 class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical rounded-lg p-0 lg:w-5/12 relative shadow-2xl uk-animation-slide-bottom-small">
 
@@ -210,7 +229,6 @@
                 </div>
                 <div class="text-center py-4 border-b" style="background-color: #03A9F4" v-if="yyy == true">
                     <h3 class="text-lg font-semibold" style="color: white;"> Yorumunuz başarıyla eklendi. </h3>
-                    <!-- <button class="uk-modal-close-default bg-gray-100 rounded-full p-2.5 m-1 right-2" type="button" uk-close uk-tooltip="title: Close ; pos: bottom ;offset:7"></button> -->
                 </div>
                 <div class="flex flex-1 items-start space-x-4 p-5">
                     <img src="../../../front/images/avatars/avatar-2.jpg"
@@ -239,7 +257,7 @@
                         Paylaş </button>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <script>
         jQuery.each(jQuery('textarea[data-autoresize]'), function () {
