--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -212,7 +212,7 @@
             </td>
             <td style="width: 10vw;">
                 <div>
-                    <button @click="ekle()" style="color: white;" class="uk-close bg-blue-600 flex h-9 items-center justify-center rounded-md text-white px-5 font-medium"> Paylaş </button>
+                    <img src="../../../paylas.png" @click="ekle()" style="height: 40px; top: 0px; bottom: 0px; left: 0px; right: 0px; margin:auto; margin-bottom: 4px;">
                 </div>
             </td>
         </tr>
