--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -206,7 +206,7 @@
             <td style="width: 90vw;">
                 <div>
                     <p style="color: black !important;"> {{yorum}} </p>
-                    <input type="text" placeholder="Yorumunuz" v-model="yorum">
+                    <input type="text" placeholder="Yorumunuz" v-model="yorum" style="border: 1px solid lightgray; border-radius: 30px; margin-bottom: 8px; margin-left: 3px;">
                 </div>
             </td>
             <td style="width: 10vw;">
