--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -203,13 +203,13 @@
 <footer>
     <table>
         <tr>
-            <td style="width: 90vw;">
-                <div>
+            <td style="width: 85vw;">
+                <div style="margin-left: 1vw;">
                     <p style="color: black !important;"> {{yorum}} </p>
                     <input type="text" placeholder="Yorumunuz" v-model="yorum" style="border: 1px solid lightgray; border-radius: 30px; margin-bottom: 8px; margin-left: 3px;">
                 </div>
             </td>
-            <td style="width: 10vw;">
+            <td style="width: 15vw;">
                 <div>
                     <img src="../../../paylas.png" @click="ekle()" style="height: 40px; top: 0px; bottom: 0px; left: 0px; right: 0px; margin:auto; margin-bottom: 4px;">
                 </div>
