--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -205,7 +205,7 @@
         <tr>
             <td style="width: 85vw;">
                 <div style="margin-left: 1vw;">
-                    <p style="color: black !important;"> {{yorum}} </p>
+                    <p style="color: black !important; max-width: 85vw;"> {{yorum}} </p>
                     <input type="text" placeholder="Yorumunuz" v-model="yorum" style="border: 1px solid lightgray; border-radius: 30px; margin-bottom: 8px; margin-left: 3px;">
                 </div>
             </td>
