--- a/views/front/medya/test.ejs
+++ b/views/front/medya/test.ejs
@@ -19,7 +19,7 @@
 </script>
 
 
-
+<!-- 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.0.0-rc.1/cropper.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <meta charset="utf-8">
@@ -105,4 +105,4 @@
         $('#avatar-crop').attr('src', base64encodedImage);
         $(cropperModalId).modal('hide');
     });
-</script>
+</script> -->
