--- a/views/front/medya/test.ejs
+++ b/views/front/medya/test.ejs
@@ -1,38 +1,56 @@
-<!-- Include stylesheet -->
-<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-
-<!-- Create the editor container -->
-<div id="editor">
-
-</div>
-
-<!-- Include the Quill library -->
-<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-
-<!-- Initialize Quill editor -->
-<script>
-  var quill = new Quill('#editor', {
-    theme: 'snow'
-  });
-</script>
-
-
-<!-- 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.0.0-rc.1/cropper.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+    integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+    crossorigin="anonymous" />
+<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
+    integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
+    crossorigin="anonymous"></script>
+<script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+    crossorigin="anonymous"></script>
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+
 <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
     .cropper-container {
         margin: 0 auto 20px auto;
     }
 </style>
 
-<div>
-    <input type="file" name="photo" accept="image/*" class="js-photo-upload">
+<div class="panel-heading fixed-top"
+    style="border-bottom:1px solid #f2f2f2; border-radius:10px; background-color: white;">
+    <table>
+        <tr>
+            <td>
+                <ion-icon name="chevron-back-outline"
+                    style="color: gray; float: left; font-size: 24pt; padding-left: 20px;"></ion-icon>
+            </td>
+            <td>
+                <h3 class="panel-title" style="padding-top: 1px; padding-left: 5vw;">Medya Ekle</h3>
+            </td>
+        </tr>
+    </table>
 </div>
 
-<img id="avatar-crop" src="" style="width:271px; height:271px;">
+<div>
+    <input type="file" name="photo" accept="image/*" class="js-photo-upload" style="margin-left: 25vw ;">
+</div>
+
+<img id="avatar-crop" src="" style="width:271px; height:271px; margin-left: 25vw; border:1px solid lightgray">
+
+<div style="margin: 3vw;">
+    <div class="form-group">
+        <input type="text" class="form-control" placeholder="Başlık">
+    </div>
+    <div id="editor" style="height: 200px;">
+
+    </div>
+</div>
 
 <div class="modal fade remove-modal" tabindex="-1" role="dialog" id="cropperModal">
     <div class="modal-dialog modal-lg" role="document">
@@ -101,6 +119,13 @@
         const canvas = cropper.getCroppedCanvas();
         const base64encodedImage = canvas.toDataURL();
         $('#avatar-crop').attr('src', base64encodedImage);
+        console.log(base64encodedImage)
         $(cropperModalId).modal('hide');
     });
-</script> -->
+</script>
+
+<script>
+    var quill = new Quill('#editor', {
+      theme: 'snow'
+    });
+  </script>
