--- a/views/front/medya/test.ejs
+++ b/views/front/medya/test.ejs
@@ -41,7 +41,7 @@
     <input type="file" name="photo" accept="image/*" class="js-photo-upload" style="margin-left: 25vw ;">
 </div>
 
-<img id="avatar-crop" src="" style="width:271px; height:271px; margin-left: 25vw; border:1px solid lightgray">
+<img id="avatar-crop" src="" style="width:35vw; height:35vw; margin-left: 32vw; border:1px solid lightgray">
 
 <div style="margin: 3vw;">
     <div class="form-group">
