--- a/views/front/auth/register2.ejs
+++ b/views/front/auth/register2.ejs
@@ -69,10 +69,10 @@
                             <label class="mb-0"> Adınız </label>
                             <input type="text" name="name" placeholder="Adınız" class="bg-gray-100 h-12 mt-2 px-3 rounded-md w-full">
                         </div>
-                        <div>
+                        <!-- <div>
                             <label class="mb-0"> Soyadınız </label>
                             <input type="text" name="surname" placeholder="Soyadınız" class="bg-gray-100 h-12 mt-2 px-3 rounded-md w-full">
-                        </div>
+                        </div> -->
                     </div>
                     <div class="form-group">
                         <label>Doğum Tarihiniz</label>
