--- a/views/front/part/headerflex.ejs
+++ b/views/front/part/headerflex.ejs
@@ -13,7 +13,9 @@
         <a href="/"><img src="../../../newpan.png" style="height: 34px; width: auto; top: 0px; bottom: 0px; left: 0px; right: 0px; margin:auto"></a>
     </div>
     <div style="flex: 2;">
-        <ion-icon name="search-outline" href="/arama" style="color: gray; float: right;" class="text-3xl" uk-toggle="target: #wrapper ; cls: show-searchbox"></ion-icon>
+        <a href="/arama">
+            <ion-icon name="search-outline" style="color: gray; float: right;" class="text-3xl" uk-toggle="target: #wrapper ; cls: show-searchbox"></ion-icon>
+        </a>
     </div>
 </header>
 
