--- a/views/front/arama.ejs
+++ b/views/front/arama.ejs
@@ -78,10 +78,10 @@
     <div id="kisiler" style="display: none; padding-left:10px;">
         <table>
             <tr>
-                <td style="width: 12%;">
+                <td style="width: 10vw;">
                     <a href="#"><img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style="border-radius: 75px; height: 45px; width: 45px;"></a>
                 </td>
-                <td style="width: 71%;">
+                <td style="width: 75vw;">
                     <span style="margin-top: 20px;"><b>Abdullah Bektaş</b></span><br>
                     <span style="margin-top: 20px;"><small>Kişi hakkında bio</small></span>
                 </td>
