--- a/views/front/medya/medyaic.ejs
+++ b/views/front/medya/medyaic.ejs
@@ -1,4 +1,6 @@
 <% layout("../layout") %>
+<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+
 <header
 style="display: flex; height: 50px; padding-left: 2vw; padding-top: 10px; border-radius: 20px;">
 <div style="flex: 1;">
