--- a/views/front/medya/test.ejs
+++ b/views/front/medya/test.ejs
@@ -11,8 +11,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
     integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
     crossorigin="anonymous"></script>
-    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script src="https://cdn.ckeditor.com/4.16.0/standard/ckeditor.js"></script>
+
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,8 +27,10 @@
     <table>
         <tr>
             <td>
-                <ion-icon name="chevron-back-outline"
-                    style="color: gray; float: left; font-size: 24pt; padding-left: 10px;"></ion-icon>
+                <a href="/medya">
+                    <ion-icon name="chevron-back-outline"
+                        style="color: gray; float: left; font-size: 24pt; padding-left: 10px;"></ion-icon>
+                </a>
             </td>
             <td>
                 <h3 class="panel-title" style="padding-top: 1px; padding-left: 5vw;">Medya Ekle</h3>
@@ -38,19 +40,25 @@
 </div>
 
 <div>
-    <input type="file" name="photo" accept="image/*" class="js-photo-upload" style="margin-left: 25vw ;">
+    <input type="file" name="photo" accept="image/*" class="js-photo-upload" style="margin-left: 32vw ;">
 </div>
 
-<img id="avatar-crop" src="" style="width:35vw; height:35vw; margin-left: 32vw; border:1px solid lightgray">
+<img id="avatar-crop" src="https://plchldr.co/i/271x271?&bg=edf6f9&fc=aaaaaa&text=Kirpma Alani"
+    style="width:35vw; height:35vw; margin-left: 32vw; border:1px solid lightgray">
 
 <div style="margin: 3vw;">
     <div class="form-group">
         <input type="text" class="form-control" placeholder="Başlık">
     </div>
-    <div id="editor" style="height: 200px;">
-
-    </div>
+    <textarea name="editor1"></textarea>
 </div>
+
+<footer
+    style="position: fixed; height: 50px; bottom: 0; width: 100%; background-color: white; border-top:1px solid lightgray; border-radius: 8px;">
+    <div>
+        <img src="../../../paylas.png" style="height: 40px; margin:auto; margin-top: 5px;  margin-left: 90vw;">
+    </div>
+</footer>
 
 <div class="modal fade remove-modal" tabindex="-1" role="dialog" id="cropperModal">
     <div class="modal-dialog modal-lg" role="document">
@@ -72,7 +80,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.0.0-rc.1/cropper.min.js"></script>
 
 <script>
-
+    window.a = ""
     let cropper;
     let cropperModalId = '#cropperModal';
     let $jsPhotoUploadInput = $('.js-photo-upload');
@@ -119,13 +127,30 @@
         const canvas = cropper.getCroppedCanvas();
         const base64encodedImage = canvas.toDataURL();
         $('#avatar-crop').attr('src', base64encodedImage);
-        console.log(base64encodedImage)
+        window.a = base64encodedImage
         $(cropperModalId).modal('hide');
     });
 </script>
 
 <script>
-    var quill = new Quill('#editor', {
-      theme: 'snow'
-    });
-  </script>
+    function medyaKaydet() {
+        axios.post("/medyaekle", {
+            kapak: window.a,
+            title: document.getElementById("title").value,
+            aciklama: document.getElementById("aciklama").value,
+        }).then(response => {
+            alert(response)
+        })
+    }
+
+
+    
+</script>
+
+<script>
+    CKEDITOR.replace( 'editor1' ,
+       {toolbar: [
+		{ name: 'basicstyles', items: [ 'Bold', 'Italic' ,'Link','Format','Font','FontSize'] }
+	]} 
+    );
+</script>
