--- a/views/front/set/setting.ejs
+++ b/views/front/set/setting.ejs
@@ -3,7 +3,7 @@
 style="display: flex; height: 50px; padding-left: 2vw; padding-right: 7vw; padding-top: 10px; border-radius: 20px;">
 <% if (user) { %>
     <div style="flex: 1;">
-        <a href="/setting">
+        <a href="/">
             <ion-icon name="chevron-back-outline" style="color: gray; float: left;" class="text-3xl"></ion-icon>
         </a>
     </div>
