--- a/views/front/medya/medyaic.ejs
+++ b/views/front/medya/medyaic.ejs
@@ -108,11 +108,11 @@ style="display: flex; height: 50px; padding-left: 2vw; padding-top: 10px; border
                                 <div>
                                     <br>
                                     <p class="leading-6" id="yorum" style="font-size: 15pt; margin-top: -8px; margin-left: -10px;">
-                                        <%= medya.aciklama.substring(0,150) %>...<a style="color: #03A9F4;" onclick="seeMore('yorum')">Devamını gör.</a>
+                                        <%- medya.aciklama.substring(0,150) %>...<a style="color: #03A9F4;" onclick="seeMore('yorum')">Devamını gör.</a>
                                     </p>
-                                    <p class="leading-6" id="offyorum" style="font-size: 15pt; margin-top: -8px; margin-left: -10px; display: none;">
-                                        <%= medya.aciklama %>  <a style="color: #03A9F4;" onclick="geriAl('yorum')">Geri al.</a>
-                                    </p>
+                                    <!-- <p class="leading-6" id="offyorum" style="font-size: 15pt; margin-top: -8px; margin-left: -10px; display: none;">
+                                        <%- medya.aciklama %>  <a style="color: #03A9F4;" onclick="geriAl('yorum')">Geri al.</a>
+                                    </p> -->
                                     <div class="row" style="margin-left: 2vw; margin-top: 7px;">
                                         <table>
                                             <tr>
