--- a/views/front/set/setting.ejs
+++ b/views/front/set/setting.ejs
@@ -38,10 +38,10 @@ style="display: flex; height: 50px; padding-left: 2vw; padding-right: 7vw; paddi
             <span class="badge">
                 <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> <a href="/eris">Erişebilirlik</a> <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
             </span>
-            <hr style="margin-top: 22px;">
+            <!-- <hr style="margin-top: 22px;">
             <span class="badge">
                 <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Reklam Ayarları <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
-            </span>
+            </span> -->
             <hr style="margin-top: 22px;">
             <span class="badge">
                 <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> <a href="/ista">İstatistik</a> <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
